@@ -20,7 +20,7 @@ from hahomematic.const import (
     BACKEND_CCU,
     BACKEND_HOMEGEAR,
     HH_EVENT_DELETE_DEVICES,
-    HH_EVENT_ENTITIES_CREATED,
+    HH_EVENT_DEVICES_CREATED,
     HH_EVENT_ERROR,
     HH_EVENT_LIST_DEVICES,
     HH_EVENT_NEW_DEVICES,
@@ -34,7 +34,7 @@ from hahomematic.const import (
 )
 from hahomematic import data, config
 from hahomematic.decorators import systemcallback, eventcallback
-from hahomematic.entity import create_entity
+from hahomematic.entity import Device
 
 LOG = logging.getLogger(__name__)
 
@@ -127,7 +127,7 @@ class RPCFunctions():
         elif client.backend == BACKEND_HOMEGEAR:
             client.fetch_names_metadata()
         save_names()
-        create_entities()
+        create_devices()
         return True
 
     @systemcallback(HH_EVENT_DELETE_DEVICES)
@@ -237,7 +237,7 @@ class Server(threading.Thread):
         if not data.CLIENTS:
             raise Exception("No clients initialized. Not starting server.")
         try:
-            create_entities()
+            create_devices()
         except Exception as err:
             LOG.exception("Server.run: Failed to create entities")
             raise Exception("entitiy-creation-error") from err
@@ -279,51 +279,36 @@ def handle_device_descriptions(interface_id, dev_descriptions):
                 data.DEVICES[interface_id][main] = {}
             data.DEVICES[interface_id][main][address] = {}
 
-def create_entities():
+def create_devices():
     """
     Trigger createion of the objects that expose the functionality.
     """
     for interface_id in data.DEVICES:
         if interface_id not in data.CLIENTS:
-            LOG.warning("create_entities: Skipping interface %s, missing client.", interface_id)
+            LOG.warning("create_devices: Skipping interface %s, missing client.", interface_id)
             continue
         if interface_id not in data.PARAMSETS:
-            LOG.warning("create_entities: Skipping interface %s, missing paramsets.", interface_id)
+            LOG.warning("create_devices: Skipping interface %s, missing paramsets.", interface_id)
             continue
         for main_address, channels in data.DEVICES[interface_id].items():
-            create_entity_objects(interface_id, main_address, channels)
+            # Do we check for duplicates here? For now we do.
+            if main_address in data.HA_DEVICES:
+                LOG.warning("create_devices: Skipping device %s on %s, already exists.",
+                            main_address, interface_id)
+                continue
+            try:
+                data.HA_DEVICES[main_address] = Device(interface_id, main_address, channels)
+            except Exception:
+                LOG.exception("create_devices: Failed to create device: %s, %s",
+                              interface_id, main_address)
+            try:
+                data.HA_DEVICES[main_address].create_entities()
+            except Exception:
+                LOG.exception("create_devices: Failed to create entities: %s, %s",
+                              interface_id, main_address)
     if callable(config.CALLBACK_SYSTEM):
         # pylint: disable=not-callable
-        config.CALLBACK_SYSTEM(HH_EVENT_ENTITIES_CREATED)
-    # Do we check for duplicates here?
-
-def create_entity_objects(interface_id, main_address, channels):
-    """
-    Create the objects that expose the functionality.
-    """
-    device_type = data.DEVICES_RAW_DICT[interface_id][main_address][ATTR_HM_TYPE]
-    LOG.debug("create_entity_objects: Handling device %s (%s)", main_address, device_type)
-    if main_address in data.NAMES.get(interface_id, {}):
-        device_name = data.NAMES[interface_id][main_address]
-    else:
-        device_name = "{}_{}".format(device_type, main_address)
-    data.HA_DEVICES[device_name] = []
-    for channel in channels:
-        if channel not in data.PARAMSETS[interface_id]:
-            LOG.warning("create_entity_objects: Skipping channel %s, missing paramsets.", channel)
-            continue
-        for paramset in data.PARAMSETS[interface_id][channel]:
-            for parameter, parameter_data in data.PARAMSETS[interface_id][channel][paramset].items():
-                if not parameter_data[ATTR_HM_OPERATIONS] & 4 and \
-                   not parameter_data[ATTR_HM_TYPE] == TYPE_ACTION and \
-                   not parameter_data[ATTR_HM_TYPE] == TYPE_FLOAT:
-                    LOG.debug("create_entity_objects: Skipping %s (no event, no action, no float)",
-                              parameter)
-                    continue
-                entity_id = create_entity(channel, parameter, parameter_data, interface_id)
-                if entity_id is not None:
-                    data.HA_DEVICES[device_name].append(entity_id)
-    # TODO: Hook for custom entity based on `device_type`
+        config.CALLBACK_SYSTEM(HH_EVENT_DEVICES_CREATED)
 
 def save_devices_raw():
     """
