@@ -4,6 +4,7 @@ Version 0.0.2 (2021-)
 - Create `switch` for type `ACTION` for parameters with only write-flag
 - Create `number` for type `FLOAT` for parameters with only write-flag
 - Add exceptions to abort startup under certain conditions
+- Refactoring, introduce `Device` class
 
 Version 0.0.1 (2021-04-08)
 - Initial testing release
